front/textcare/src/app/globals.css
html,
body {
  max-width: 100vw;
  overflow-x: hidden;
}

body {
  color: #433534;
  font-family: Lato, Arial, Helvetica, sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

* {
  box-sizing: border-box;
  padding: 0;
  margin: 0;
}

a {
  color: inherit;
  text-decoration: none;
}

.page-container {
  display: flex;
  justify-content: center;
  align-items: center;
  height: 100vh;
  background-color: #fef3ea;
  margin: 0;
}

ul {
  list-style-type: none;
}

.centered-div {
  width: 375px;
  height: 812px;
  border: 1px solid #ccc;
  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
  justify-content: center;
  display: flex;
}

.card {
  background: #ffffff;
  padding: 16px;
  gap: 10px;
  border-radius: 8px;
}

ul.provider {
  height: 100%;
  display: flex;
  flex-direction: column;
  justify-content: space-around;
}

.providerBox {
  width: 327px;
  height: 100%;
  display: flex;
  flex-direction: column;
}

h3 {
  font-size: 20px;
  font-weight: 700;
  line-height: 25px;
  text-align: left;
  text-underline-position: from-font;
  text-decoration-skip-ink: none;
}

h4 {
  font-size: 16px;
  font-weight: 700;
  line-height: 20px;
  text-align: left;
  text-underline-position: from-font;
  text-decoration-skip-ink: none;
}

p {
  font-size: 16px;
  font-weight: 400;
  line-height: 24px;
  text-align: left;
  text-underline-position: from-font;
  text-decoration-skip-ink: none;
}

p.small {
  font-size: 12px;
  font-weight: 400;
  line-height: 18px;
  text-align: left;
  text-underline-position: from-font;
  text-decoration-skip-ink: none;
}

button,
a.buttonLink {
  margin-top: 15px;
  margin-bottom: 15px;
  padding: 12px 24px 12px 24px;
  gap: 10px;
  border-radius: 24px;
  background: #ffdecc;
  border: 1px solid #f5b38e;
  display: flex;
  justify-content: center;
  align-items: center;
  font-size: 16px;
  font-weight: 700;
}

